[plugin-web-app] Remove workaround for closed iOS-specific Appium bug
https://github.com/appium/appium/issues/6825